Add reply_to to .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # development | production (production sends confirmation email to parents)
 APP_ENV=development
 APP_URL=http://localhost:8888/OnlineRegistration
+reply_to=cmmp@crosspointchurchsv.org
 
 DB_HOST=127.0.0.1
 DB_PORT=8889
